02-sg/main.tf
module "db" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for DB MySQL Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "db"
}
module "backend" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for DB backend Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "backend"
}

module "frontend" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for DB frontend Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "frontend"
}

module "bastion" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for DB bastion Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "bastion"
}

module "app_alb" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for app alb Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "app_alb"
}


module "vpn" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for VPN Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "vpn"
  ingress_rules = var.vpn_sg_rules

}

module "web_alb" {
  source = "../../terraform-expense-securitygroup"
  project_name = var.project_name
  environment = var.environment
  sg_description = "SG for web alb Instances"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  common_tags = var.common_tags
  sg_name = "web_alb"
}


# db is accepting connection from  backend 
resource "aws_security_group_rule" "db_backend" {    # terraform sg rule (db backend connection nunchi accept chesthundi)
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.backend.sg_id   # cidr kadhu source akkada nunchi vasthundi ani (backend)
  security_group_id = module.db.sg_id
}
#  db is accepting connection from  bastion
resource "aws_security_group_rule" "db_bastion" {    
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id   
  security_group_id = module.db.sg_id
}
# db is accepting connection from  vpn
resource "aws_security_group_rule" "db_vpn" {    
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.vpn.sg_id   
  security_group_id = module.db.sg_id
}

#backend is accepting connection from  app_alb 
resource "aws_security_group_rule" "backend_app_alb" {   # ( backend frontend connection nunchi accept chesthundi)
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  source_security_group_id = module.app_alb.sg_id   # cidr kadhu source akkada nunchi vasthundi ani (frontend)
  security_group_id = module.backend.sg_id
}

#  backend is accepting connection from bastion
resource "aws_security_group_rule" "backend_bastion" {     
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id   
  security_group_id = module.backend.sg_id
}

#backend is accepting connection from  vpn_ssh
resource "aws_security_group_rule" "backend_vpn_ssh" {   
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.vpn.sg_id   
  security_group_id = module.backend.sg_id
}

#backend is accepting connection from  vpn_http
resource "aws_security_group_rule" "backend_vpn_http" {   
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  source_security_group_id = module.vpn.sg_id  
  security_group_id = module.backend.sg_id
}

#  app_shh is accepting connection from vpn
resource "aws_security_group_rule" "app_alb_vpn" {     
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  source_security_group_id = module.vpn.sg_id   
  security_group_id = module.app_alb.sg_id

}

resource "aws_security_group_rule" "app_alb_bastion" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from
  security_group_id = module.app_alb.sg_id
}

resource "aws_security_group_rule" "app_alb_frontend" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  source_security_group_id = module.frontend.sg_id # source is where you are getting traffic from
  security_group_id = module.app_alb.sg_id
}

# backend is accepting connection from  public 
resource "aws_security_group_rule" "frontend_web_alb" {    # (frontend public connection nunchi accept chesthundi)
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.frontend.sg_id
}

# frontend is accepting connection from  bastion 
resource "aws_security_group_rule" "frontend_bastion" {    
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.bastion.sg_id
  security_group_id = module.frontend.sg_id
}  

# frontend is accepting connection from  bastion 
resource "aws_security_group_rule" "frontend_vpn" {    
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = module.vpn.sg_id
  security_group_id = module.frontend.sg_id
}  
#  bastion is accepting connection from  public 
resource "aws_security_group_rule" "bastion_public" {    
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.bastion.sg_id
}  

resource "aws_security_group_rule" "web_alb_public" {    
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.web_alb.sg_id
}  

resource "aws_security_group_rule" "web_alb_public_https" {    
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.web_alb.sg_id
}
